# tommyds

./: .gitignore  CMakeLists.txt
cmake/: libtommyds.pc.in  tommyds-config.cmake.in
tommyds/: CMakeLists.txt
